data/derived/fa15/progs/unify/prog2051.ml.out
Characters 56-57:
  else let n2 = n div 10 in digitsOfInt n2 append [n2];;
                ^
Error: This expression has type int
       This is not a function; it cannot be applied.
